# Vulkan-glTF-Morph-Target

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  buildShaders.sh
Vulkan-Pointcloud-Viewer/app/: CMakeLists.txt  build.gradle
Vulkan-Pointcloud-Viewer/app/src/main/: AndroidManifest.xml
Vulkan-Pointcloud-Viewer/app/src/main/cpp/: AndroidMain.cpp  PointCloud.cpp  PointCloud.h  Util.h  VulkanMain.cpp
Vulkan-Pointcloud-Viewer/app/src/main/res/values/: strings.xml
Vulkan-Pointcloud-Viewer/gradle/wrapper/: gradle-wrapper.properties
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/de/saschawillems/vulkanglTFPBR/: VulkanActivity.java
base/: VulkanAndroid.h  VulkanDevice.hpp  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanglTFModel.hpp
data/models/fourCube/: fourCube.blend  fourCube.gltf
data/models/threeCube/: threeCube.blend  threeCube.gltf
data/models/twoCube/: twoCube.gltf  twoCubeLinear.gltf
data/models/twoCubeMorph/: twoCubeMorph.gltf
data/shaders/: morph.frag  morph.frag.spv  morph.vert  morph.vert.spv  normal.vert  normal.vert.spv
src/: CMakeLists.txt  VPCViewer.cpp  VPCViewer.h  debug.cpp  debug.h  main.cpp
